--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+
+
+.mainBtn{
+width: 100%;
+height: 10%;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.webConversation {
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.webConversation:hover {
+  background-color: #2980b9;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.middleBtn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.studyDiv{
+ 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  position: absolute;
+top: 20vh;
+min-height: 150px;
+justify-content: center;
+align-items: center;
+}
+
+/* Style the additional buttons */
+button.additional-button {
+  background-color: #2ecc71;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+button.additional-button:hover {
+  background-color: #27ae60;
+}
+.study-childDiv{
+  background-color: #e62a53;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 10px;
+  margin: 5px;
+  width: 15vw;
+  text-align: center;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.bot{
+  width: 20vw;
+  height: 10vh;
+  background-color: #7dce9f;
+  margin-bottom: 1vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tex-area{
+  width: 20vw;
+  height: 10vh;
+  border: 1px solid blue;
+ 
+  resize: none;
+}
+
+.ask-childDiv{
+  position: absolute;
+  top: 20vh;
 }
